--- a/.github/workflows/akshare.yml
+++ b/.github/workflows/akshare.yml
@@ -37,6 +37,6 @@ jobs:
           git config user.email "github-actions@users.noreply.github.com"
           git add akshare.json
           git commit -m "Update akshare.json [skip ci]" || echo "No changes to commit"
-          git push
+          git push https://x-access-token:${{ secrets.PAT_TOKEN }}@github.com/ChestnutAztec/hana_helper.git HEAD:main
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
