--- a/.github/workflows/akshare.yml
+++ b/.github/workflows/akshare.yml
@@ -22,7 +22,7 @@ jobs:
       - name: Install dependencies
         run: |
           pip install --upgrade pip
-          pip install akshare pandas
+          pip install --upgrade "akshare==1.14.80" pandas
 
       - name: Fetch AkShare JSON
         run: |
